Fixed a bug on dates passing. Fixed responsiveness and it's now smooth on mobile devices.

--- a/styles/base-all.css
+++ b/styles/base-all.css
@@ -128,12 +128,6 @@ header {
 	margin: 0 auto;
 }
 
-@media all and (max-width: 820px) {
-	#Main {
-		margin: 0 10px;
-	}
-}
-
 /** Form Elements **/
 fieldset {
 	/*border: 1px solid black;*/
@@ -168,14 +162,18 @@ input[type=reset],
 	border: 2px solid #3679D9;
 	background-color: #fdfdfd;
 	padding: 4px 10px;
-	margin: 0 3px;
+	margin: 3px 3px;
 	text-shadow: none;
 	box-shadow: 0 2px 6px #91B6EB;
 	border-radius: 5px;
-	
+	/*line-height: 39px;*/
 	transition: all .7s;
 	-moz-transition: all .7s;
 	-webkit-transition: all .7s;
+}
+
+a.button {
+	display: inline-block;
 }
 
 input[type=button]:hover,
@@ -295,6 +293,7 @@ p.details {
 	box-shadow: 0 2px 6px #DDF597;
 	border-radius: 5px;
 	opacity: 0;
+	z-index: 30;
 	
 	transition: all .7s;
 	-moz-transition: all .7s;
@@ -309,9 +308,7 @@ p.details {
 #ResultCanvas {
 	width: 70%;
 	background-color: #fdfdfd;
-	position: absolute;
-	left: 0;
-	z-index: 15;
+	float: left;
 	border-radius: 5px;
 	display: block;
 	/*margin: 0 auto;*/
@@ -320,17 +317,15 @@ p.details {
 }
 
 #WhatIf {
-	width: 29%;
-	position: absolute;
-	right: 0;
-	padding-left: 10px;
-	margin-top: 30px;
-	margin-left: -15px;
-	border: 2px solid #7f7f7f;
-	border-left: 0;
+	width: 28%;
+	float: right;
+	/*padding-left: 10px;*/
+	/*margin-top: 30px;*/
+	/*margin-left: 5px;*/
+	border: 2px solid #36B0D9;
+	box-shadow: 0 5px 15px #8CD2E9;
 	border-radius: 5px;
 	background-color: #fdfdfd;
-	z-index: 5;
 }
 
 #InnerWhatIf {
@@ -340,7 +335,7 @@ p.details {
 #WhatIf fieldset { display: none; }
 
 #Result .nextStepLinkContainer {
-	margin-top: 480px;
+	clear: both;
 }
 
 /** Navigation **/
@@ -405,3 +400,71 @@ section {
 
 .alignCenter {text-align: center;}
 
+
+@media all and (max-width: 820px) {
+	#Main {
+		margin: 0 10px;
+	}
+	
+	#ResultCanvas {
+		width: 100% !important;
+		float: none;
+		display: block;
+	}
+	
+	#WhatIf {
+		width: 100%;
+		float: none;
+		margin-top: 20px;
+	}
+	
+	#Title {
+		padding-top: 40px;
+	}
+	
+	#Introduction {
+		padding-top: 40px;
+	}
+}
+
+@media all and (max-width: 540px) {
+	p.details {
+		margin-top: 10px;
+		width: auto;
+		position: static;
+		opacity: 1;
+		/*left: 0;
+		top: -60px;*/
+	}
+	
+	#Title {
+		padding-top: 0;
+	}
+	
+	#Introduction {
+		padding-top: 0;
+	}
+	
+	h1 {
+		font-size: 3.5em;
+	}
+	
+	h2 {
+		font-size: 2.3em;
+	}
+	
+	h3 {
+		font-size: 1.8em;
+	}
+
+}
+
+@media all and (max-width: 380px) {
+	#Login {
+		width: auto;
+	}
+	
+	#Alert {
+		width: auto;
+	}
+}
